[gd_scene load_steps=2 format=3 uid="uid://d0n2x0fh7ondc"]

[ext_resource type="Script" path="res://addons/scrcpy/ScrcpyMenu/ScrcpyMenu.gd" id="1_teeyr"]

[node name="PopupPanel" type="PopupPanel"]
title = "SCRCPY MENU"
size = Vector2i(440, 198)
visible = true
script = ExtResource("1_teeyr")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(532, 457)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 436.0
offset_bottom = 194.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EnabledLbl" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Enabled:"

[node name="EnabledChkBtn" type="CheckButton" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SPathLbl" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/BoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Scrcpy path:"

[node name="SPathTEd" type="TextEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/BoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
size_flags_vertical = 4
scroll_fit_content_height = true

[node name="BrowseBtn" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/BoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Browse
"

[node name="LinkRTL" type="RichTextLabel" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 18)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "(link: [url=\"https://github.com/Genymobile/scrcpy#get-the-app\"]https://github.com/Genymobile/scrcpy#get-the-app[/url])"
autowrap_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CustomArgsLbl" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Custom Args:"

[node name="CustomArgsTEd" type="TextEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
size_flags_vertical = 4
scroll_fit_content_height = true

[node name="CloseBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Close"

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_file_dialog_confirmed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/BoxContainer/BrowseBtn" to="." method="_on_browse_btn_pressed"]
[connection signal="meta_clicked" from="VBoxContainer/MarginContainer/VBoxContainer/LinkRTL" to="." method="_on_link_rtl_meta_clicked"]
[connection signal="pressed" from="VBoxContainer/CloseBtn" to="." method="_on_close_btn_pressed"]
